@@ -1,6 +1,7 @@
 libstream-more-perl (0.7.7) UNRELEASED; urgency=low
 
   * Stream::In::DiskBuffer: fix adaptive chunk size calculation
+  * Stream::Out::Any: targets() method
 
  -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Mon, 13 Feb 2012 22:31:53 +0400
 
